# fantasy-rag-lab

./: .env.example  .gitignore  CLAUDE.md  EDA-data-prep.ipynb  README.md  gemini.md  pyproject.toml  system-prompt.md
data/batch_jobs/: msgbatch_01SM3TT5kGqVeajXysiPkj49.json
data/extracted_graph_batch/: harry_potter_section_01_extracted.json
data/extracted_graph_claude_sonnet/: harry_potter_section_01_extracted.json  harry_potter_section_02_extracted.json
data/extracted_graph_gemini/: asoiaf_section_01_extracted.json  asoiaf_section_02_extracted.json  asoiaf_section_03_extracted.json  asoiaf_section_04_extracted.json  asoiaf_section_05_extracted.json  asoiaf_section_06_extracted.json  asoiaf_section_07_extracted.json  harry_potter_section_01_extracted.json  harry_potter_section_02_extracted.json  harry_potter_section_03_extracted.json  harry_potter_section_04_extracted.json  harry_potter_section_05_extracted.json  harry_potter_section_06_extracted.json
data/extracted_graph_gemini_3_pro/: harry_potter_section_01_extracted.json  harry_potter_section_02_extracted.json  harry_potter_section_03_extracted.json  harry_potter_section_04_extracted.json
data/schemas/: a_song_of_ice_and_fire_schema.json  harry_potter_schema.json  the_wheel_of_time_schema.json
docs/: BATCH_API_GUIDE.md  MULTI_MODEL_EXTRACTION_GUIDE.md  delta_based_merge_system.md  dune_butlerian_jihad_summary.md  epub_etl_guide.md  ingestion_guide.md  knowledge_graphs_implementation_plan.md  qna_generation.md
examples/: dev.ipynb  llm_service_demo.py
scripts/: GEMINI_API_SETUP.md  LLM-API-calls-Expanded.postman_collection.json  LLM-API-calls.postman_collection.json  check_claude_vertexai.py  check_gemini_access.py  check_openai_access.py  check_openrouter_status.py  evaluate_qa_quality.py  list_anthropic_models.py  list_openrouter_models.py  migrate_to_mongodb.py  multi_model_extraction_examples.sh  simple-query.py  test_google_llm.py  test_llm_refactor.py  test_mongodb.py  test_openrouter_model.py  test_qna_generation.py  test_responses_api_structured.py  test_standard_claude.py
src/api/: main.py
src/api/endpoints/: rag_advanced.py  rag_agentic.py  rag_graph.py  rag_hybrid.py  rag_naive.py
src/core/: config.py  logging.py
src/data_engineering/: extract_epubs.py
src/etl/: README.md
src/etl/graph_extraction/: epubs_to_chunks.py  extract_epubs.py
src/etl/rag_ingestion/: analyzer.py  embed.py  ingest.py  load_milvus.py  processor.py
src/ingestion/: analyzer.py  ingest.py
src/knowledge_graph/: extract_entities.py  extract_entities_batch.py  generate_schema.py  schemas.py
src/qna_generation/: README.md  __init__.py  generate.py  generate_rag_eval.py  prompts.py  rag_eval_prompts.py  rag_eval_schemas.py  rag_eval_service.py  schemas.py  service.py
src/services/: llm_service.py  milvus_service.py  mongodb_service.py  neo4j_service.py
src/services/llm/: __init__.py  anthropic_batch_provider.py  anthropic_provider.py  base.py  batch_models.py  google_provider.py  litellm_provider.py  openai_provider.py  openrouter_provider.py  service.py  voyage_provider.py
src/utils/: logger.py
