[project]
name = "fantasy-rag-lab"
version = "0.1.0"
description = "Fantasy RAG Project using Wheel of Time and other series"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework and server
    "fastapi",
    "uvicorn",
    # LLM provider (Google-only)
    "google-genai>=1.0.0",  # Google Gemini (unified SDK for Developer API + Vertex AI)
    # Core utilities
    "python-dotenv",
    "structlog>=25.5.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.1",
    "tenacity>=9.0.0",  # Retry logic
    # MongoDB Atlas
    "motor>=3.0.0",  # Async MongoDB driver
    "pymongo>=4.0.0",  # MongoDB driver
    # LangChain (for RAG processing)
    "langchain-community>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "langchain-core>=0.2.0",
    # Vector and graph databases
    "pymilvus",
    "neo4j",
    # Document processing
    "pypdf",
    "ebooklib",
    "unstructured",
    "pypandoc>=1.16.2",
    "beautifulsoup4",
    # Embeddings and ML
    "sentence-transformers",
    "tiktoken",
    # Data processing
    "pandas",
    "pyarrow",
    "requests",
    # Development and notebooks
    "jupyter",
    "notebook",
    "ipykernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
